--- a/risk/src/main/resources/templates/startupphase.html
+++ b/risk/src/main/resources/templates/startupphase.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <div th:replace="layout :: header"/>
 </head>
 <body>
+<div id="container" style="margin: 0px auto; width: 760px;">
+
+    <div th:replace="layout :: nav"/>
+
+    <div id="box">
+        <div id="content">
+            <div class="overflow">
+                <div id="textpadding">
+                    <h2>Risk - Game Play</h2>
+                    <div class="sticky">
+                    <i class="fa fa-info-circle" aria-hidden="true"></i> <b>Startup Phase</b>
+                    </div>
+                    <br/>
+                    <p th:text="${playerName}">Player name</p>
+                    <p th:text="${countryName}">Country name</p>
+                    <p th:text="${armyCapacity}">Army capacity</p>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+    <div th:replace="layout :: footer"/>
+</div>
 
 </body>
 </html>
