--- a/risk/src/main/resources/static/css/style.css
+++ b/risk/src/main/resources/static/css/style.css
@@ -124,3 +124,11 @@ h2{
     border-bottom: 1px dashed #808080;
     font-family: arial;
 }
+
+.right-table{
+    float: right;
+}
+
+.left-table{
+    float: left;
+}
