--- a/risk/src/main/resources/templates/layout.html
+++ b/risk/src/main/resources/templates/layout.html
@@ -7,7 +7,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=windows-1252"/>
 
 
-        <link th:href="@{css/font-awesome.min.css}" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+              integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+              crossorigin="anonymous">
         <link th:href="@{css/jquery-ui.min.css}" rel="stylesheet">
         <link th:href="@{css/style.css}" rel="stylesheet">
 
