--- a/risk/src/main/resources/templates/reinforcephase.html
+++ b/risk/src/main/resources/templates/reinforcephase.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <div th:replace="layout :: header"/>
 </head>
 <body>
-$END$
+<div id="container" style="margin: 0px auto; width: 760px;">
+
+    <div th:replace="layout :: nav"/>
+
+    <div id="box">
+        <div id="content">
+            <div class="overflow">
+                <div id="textpadding">
+                    <h2>Risk - Game Play</h2>
+                    <div class="sticky">
+                        <i class="fa fa-info-circle" aria-hidden="true"></i> <b>Reinforce Phase</b>
+                    </div>
+                    <br/>
+                    <form method="get" th:action="@{/reinforcePhase/addArmy}">
+                        <table class="left-table">
+                            <tr>
+                                <td>Player name:</td>
+                                <td><span th:text="${playerName}">Player name</span></td>
+                            </tr>
+                            <tr>
+                                <td>Reinforce army capacity:</td>
+                                <td><span th:text="${reinforceArmyCount}">Army capacity</span></td>
+                            </tr>
+                            <tr>
+                                <td>Country name</td>
+                                <td>Reinforce army count</td>
+                            </tr>
+                            <tr th:each="country: ${countries}">
+                                <td th:text="${country}">Country name</td>
+                                <td><input type="text" value="0" class="reinforce-count"></td>
+                            </tr>
+                            <tr>
+                                <td><input type="hidden" value="" name="armyCounts" id="armyCounts"></td>
+                                <td><button name="submit">Add</button></td>
+                            </tr>
+                        </table>
+
+                        <table class="left-table">
+
+                        </table>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        $("button").click(function(){
+            var armyCounts = new Array();
+            $(".reinforce-count").each(function(){
+                armyCounts.push($(this).val());
+            });
+            console.log(armyCounts);
+            $("#armyCounts").val(armyCounts.join(","));
+            $("form").submit();
+        });
+    </script>
+
+    <div th:replace="layout :: footer"/>
+</div>
+
 </body>
 </html>
