--- a/risk/src/main/resources/templates/layout.html
+++ b/risk/src/main/resources/templates/layout.html
@@ -28,7 +28,7 @@
     <div id="menu">
         <a title="home" th:href="@{/}">home</a>&nbsp;&nbsp; |&nbsp;&nbsp;
         <a title="new map" th:href="@{/createMap}">new map</a>&nbsp;&nbsp; |&nbsp;&nbsp;
-        <a title="edit map" th:href="@{/editMap}">edit map</a>
+        <a title="edit map" th:href="@{/EditMap}">edit map</a>
     </div>
 
 </div>
