Added download folder as input for create map

--- a/risk/src/main/resources/templates/create01.html
+++ b/risk/src/main/resources/templates/create01.html
@@ -13,7 +13,7 @@
         <div id="content">
             <div class="overflow">
                 <div id="textpadding">
-                    <h2>Risk - Create Map - 1 of 4</h2>
+                    <h2>Risk - Create Map - 1 th:value="${downloadFolder}"of 4</h2>
                     <!--<div class="sticky">-->
                     <!--<i class="fa fa-info-circle" aria-hidden="true"></i> <b>About</b>-->
                     <!--</div>-->
@@ -31,6 +31,10 @@
                             <tr>
                                 <td># countries</td>
                                 <td><input type="text" name="numberOfCountry"/></td>
+                            </tr>
+                            <tr>
+                                <td>Download folder</td>
+                                <td><input type="text" name="downloadFolder"/></td>
                             </tr>
                             <tr>
                                 <td></td>
