--- a/risk/src/main/resources/templates/create02.html
+++ b/risk/src/main/resources/templates/create02.html
@@ -35,6 +35,7 @@
                                     <input type="hidden" id="controlValues" value="" name="controlValues" />
                                     <input type="hidden" name="numberOfContinent" th:value="${numberOfContinent}" />
                                     <input type="hidden" name="numberOfCountry" th:value="${numberOfCountry}" />
+                                    <input type="hidden" name="downloadFolder" th:value="${downloadFolder}" />
                                     <input type="hidden" name="name" th:value="${name}" />
                                 </td>
 
