--- a/risk/src/main/resources/templates/create04.html
+++ b/risk/src/main/resources/templates/create04.html
@@ -43,6 +43,7 @@
                                     <input type="hidden" name="continentOfCountries" th:value="${continentOfCountries}" />
                                     <input type="hidden" name="numberOfContinent" th:value="${numberOfContinent}"/>
                                     <input type="hidden" name="numberOfCountry" th:value="${numberOfCountry}"/>
+                                    <input type="hidden" name="downloadFolder" th:value="${downloadFolder}" />
                                     <input type="hidden" name="name" th:value="${name}"/>
                                     <input type="hidden" id="continentNames" th:value="${continentNames}" name="continentNames"/>
                                     <input type="hidden" id="controlValues" th:value="${controlValues}" name="controlValues"/>
