--- a/risk/src/main/resources/templates/create03.html
+++ b/risk/src/main/resources/templates/create03.html
@@ -42,6 +42,7 @@
                                     <input type="hidden" name="continentOfCountries" id="continentOfCountries" />
                                     <input type="hidden" name="numberOfContinent" th:value="${numberOfContinent}"/>
                                     <input type="hidden" name="numberOfCountry" th:value="${numberOfCountry}"/>
+                                    <input type="hidden" name="downloadFolder" th:value="${downloadFolder}" />
                                     <input type="hidden" name="name" th:value="${name}"/>
                                     <input type="hidden" id="continentNames" th:value="${continentNames}" name="continentNames"/>
                                     <input type="hidden" id="controlValues" th:value="${controlValues}" name="controlValues"/>
