Integrated edit module with create functionality

--- a/risk/src/main/resources/templates/edit00.html
+++ b/risk/src/main/resources/templates/edit00.html
@@ -13,28 +13,16 @@
         <div id="content">
             <div class="overflow">
                 <div id="textpadding">
-                    <h2>Risk - Create Map - 1 of 4</h2>
+                    <h2>Risk - Edit Map - 1 of 5</h2>
                     <!--<div class="sticky">-->
                     <!--<i class="fa fa-info-circle" aria-hidden="true"></i> <b>About</b>-->
                     <!--</div>-->
                     <br/>
-                    <form th:action="@{/create02}" method="post">
+                    <form th:action="@{/edit01}" method="post">
                         <table>
                             <tr>
-                                <td>Map name</td>
-                                <td><input type="text" name="name"/></td>
-                            </tr>
-                            <tr>
-                                <td># continents</td>
-                                <td><input type="text" name="numberOfContinent"/></td>
-                            </tr>
-                            <tr>
-                                <td># countries</td>
-                                <td><input type="text" name="numberOfCountry"/></td>
-                            </tr>
-                            <tr>
-                                <td>Download folder</td>
-                                <td><input type="text" name="downloadFolder"/></td>
+                                <td>Map file path</td>
+                                <td><input type="text" name="filename"/></td>
                             </tr>
                             <tr>
                                 <td></td>
