Added fortification phase screens

--- a/risk/src/main/resources/templates/edit01.html
+++ b/risk/src/main/resources/templates/edit01.html
@@ -26,11 +26,11 @@
                             </tr>
                             <tr>
                                 <td># continents</td>
-                                <td><input type="text" name="numberOfContinent" th:value="${numberOfContinent}"/></td>
+                                <td><input type="text" name="numberOfContinent" readonly th:value="${numberOfContinent}"/></td>
                             </tr>
                             <tr>
                                 <td># countries</td>
-                                <td><input type="text" name="numberOfCountry" th:value="${numberOfCountry}"/></td>
+                                <td><input type="text" name="numberOfCountry" readonly th:value="${numberOfCountry}"/></td>
                             </tr>
                             <tr>
                                 <td>Download folder</td>
