Added the phaseView and dominationView model to UI of attackPhase

--- a/risk/src/main/resources/templates/reinforcephase.html
+++ b/risk/src/main/resources/templates/reinforcephase.html
@@ -42,10 +42,10 @@
                             </tr>
                         </table>
 
-                        <table class="right-table">
+                        <div class="right-table">
                             <div th:replace="layout :: phaseView" />
                             <div th:replace="layout :: dominationView" />
-                        </table>
+                        </div>
                     </form>
                 </div>
             </div>
