Corrected the view of Fortification phase

--- a/risk/src/main/resources/templates/fortifyphase.html
+++ b/risk/src/main/resources/templates/fortifyphase.html
@@ -25,27 +25,7 @@
                                 <td><span th:text="${phaseView.playerName}">Player name</span></td>
                             </tr>
                             <tr>
-                           <div>
-                            <table>
-                                <tr>
-                                    <td>Country name</td>
-                                    <td>Army count</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div th:each="country : ${countryNames}">
-                                            <span th:text="${country}"></span><br/>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div th:each="armyCount : ${armyCounts}">
-                                            <span th:text="${armyCount}"></span><br/>
-                                        </div>
-                                    </td>
-                                </tr>
-
-                            </table>
-                        </div>      <td>Move army from:</td>
+                                <td>Move army from:</td>
                                 <td>
                                     <select name="startCountry">
                                         <option th:each="country : ${countryNames}" th:value="${country}"
@@ -83,8 +63,8 @@
                     </form>
 
                     <div class="right-table">
-                        <div th:replace="layout :: phaseView" />
-                        <div th:replace="layout :: dominationView" />
+                        <div th:replace="layout :: phaseView"/>
+                        <div th:replace="layout :: dominationView"/>
                         <table>
                             <tr>
                                 <td>Country name</td>
